add reader & book list

--- a/templates/home.html
+++ b/templates/home.html
@@ -7,7 +7,7 @@
 <body>
 <h1>圖書資訊暨借閱管理系統</h1>
 <a href="/">首頁</a>
-<a href="/list">查詢所有書籍</a>
+<a href="/booklist">查詢所有書籍</a>
 <br>
 <br>
 <a href="/staff">我是管理員</a>
