--- a/templates/new_reader.html
+++ b/templates/new_reader.html
@@ -16,7 +16,7 @@
         身分證字號<br>
         <input type="text" name="ssn" /></br>
         地址<br>
-        <textarea name="address"></textarea><br>
+        <textarea type="text" name="address"></textarea><br>
         信箱<br>
         <input type="text" name="mail" /></br>
         電話<br>
