--- a/templates/book_search.html
+++ b/templates/book_search.html
@@ -1,13 +1,8 @@
 <!doctype html>
 <html>
    <body>
-
-    <h1>所有書本</h1>
-    <form action="{{ url_for('book_search') }}" method="POST">
-      <h2>請輸入書名</h2><br>
-      <input type="text" name="book_search"/>
-      <button>查詢</button>
-  </form>
+    <h1>查詢結果</h1>
+    <br>
     <hr>
       <table border = 1>
          <thead>
@@ -18,7 +13,7 @@
             <td>版次</td>
          </thead>
          
-         {% for row in books %}  
+         {% for row in book_search %}  
             <tr>
                <td>{{row["ISBN"]}}</td>
                <td>{{row["title"]}}</td>
@@ -28,6 +23,7 @@
             </tr>
          {% endfor %}
       </table>
+     
 
    </body>
 </html>
