--- a/templates/booklist.html
+++ b/templates/booklist.html
@@ -3,8 +3,8 @@
    <body>
 
     <h1>所有書本</h1>
-    <form action="{{ url_for('book_search') }}" method="POST">
-      <h2>請輸入書名</h2><br>
+  <form action="/book_search">
+      請輸入書名
       <input type="text" name="book_search"/>
       <button>查詢</button>
   </form>
