--- a/templates/new_reader.html
+++ b/templates/new_reader.html
@@ -20,7 +20,10 @@
         信箱<br>
         <input type="text" name="mail" /></br>
         電話<br>
-        <input type="text" name="phone" /><br><br>
+        <input type="text" name="phone" /><br>
+        設定密碼<br>
+        <input type="password" name="password" /><br><br>
+        
         
         <button>註冊</button>
     </form>
