--- a/templates/reader.html
+++ b/templates/reader.html
@@ -10,7 +10,7 @@
 	<h1>會員登入</h1>
 	<form action="/signin" method="POST">
 		姓名 <input type="text" name="name" /><br />
-		身分證字號 <input type="text" name="ssn" /><br />
+		密碼 <input type="password" name="password" /><br />
 		<button>登入</button>
 	</form>
 	<br>
