--- a/templates/reader.html
+++ b/templates/reader.html
@@ -8,7 +8,7 @@
 
 <body>
 	<h1>會員登入</h1>
-	<form action="/signin" method="POST">
+	<form action="/r_signin" method="POST">
 		姓名 <input type="text" name="name" /><br />
 		密碼 <input type="password" name="password" /><br />
 		<button>登入</button>
