--- a/templates/reader.html
+++ b/templates/reader.html
@@ -9,7 +9,7 @@
 <body>
 	<h1>會員登入</h1>
 	<form action="/r_signin" method="POST">
-		姓名 <input type="text" name="name" /><br />
+		姓名 <input type="text" name="rname" /><br />
 		密碼 <input type="password" name="password" /><br />
 		<button>登入</button>
 	</form>
