--- a/templates/r_member.html
+++ b/templates/r_member.html
@@ -9,7 +9,7 @@
 <body>
     <h1>{{ rname }}你好，歡迎你回來</h1>
     <br>
-    <a href="/borrow">我要借書</a>
+    <a href="/book_available">我要借書</a>
     <br>
     <a href="/return">我要還書</a>
     <br>
