--- a/templates/book_available.html
+++ b/templates/book_available.html
@@ -17,6 +17,7 @@
          <td>作者</td>
          <td>分類</td>
          <td>版次</td>
+         <td>是否可借閱</td>
       </thead>
 
       {% for row in books %}
@@ -24,10 +25,10 @@
          <td>{{row["ISBN"]}}</td>
          <td>{{row["title"]}}</td>
          <td>{{row["author"]}}</td>
-         <td>{{row['category']}}</td>
-         <td>{{row['version']}}</td>
+         <td>{{row["category"]}}</td>
+         <td>{{row["version"]}}</td>
          <td>
-            {% if row["ISBN"] in report %}
+            {% if row["ISBN"] in reports %}
             不在架上
             {% else %}
             <a href="/borrow?book={{row['ISBN']}}">我要借書</a>
