0504 reader function & books query

--- a/templates/new_staff.html
+++ b/templates/new_staff.html
@@ -13,6 +13,8 @@
         <input type="text" name="sname" /></br>
         員工編號<br>
         <input type="text" name="empid" /></br><br>
+        密碼<br>
+        <input type="password" name="password" /></br><br>
         
         <button>註冊</button>
     </form>
