--- a/templates/staff.html
+++ b/templates/staff.html
@@ -8,8 +8,9 @@
 
 <body>
     <h1>管理員登入</h1>
-    <form action="/signin" method="POST">
-        請輸入員工編號 <input type="text" name="ssn" /><br />
+    <form action="/s_signin" method="POST">
+        請輸入員工編號 <input type="text" name="empid" /><br/>
+        密碼 <input type="password" name="password" /><br/>
         <button>登入</button>
     </form>
     <br>
