--- a/templates/reader_list.html
+++ b/templates/reader_list.html
@@ -27,7 +27,7 @@
          {% endfor %}
       </table>
       <br>
-    <div><a href="/s_signin">回到控制面板</a></div>
+    <div><a href="/s_member">回到控制面板</a></div>
      
 
    </body>
