--- a/templates/s_member.html
+++ b/templates/s_member.html
@@ -9,14 +9,37 @@
 <body>
     <h1>{{ sname }}你好，歡迎你回來</h1>
     <br>
+    <h1>查詢</h1>
     <a href="/reader_list">查看所有讀者</a>
     <br>
     <a href="/s_profile">查看個人資料</a>
     <br>
-    <a href="/modify0">修改個人資料</a>
+    <a href="/">查看所有書籍</a>
     <br>
-    <a href="/recommend">書籍薦購</a>
+    <a href="/">查看所有借閱紀錄</a>
     <br>
+    <hr>
+    <h1>新增</h1>
+    <br>
+    <a href="/">新增書籍</a>
+    <br>
+    <a href="/">新增一筆借閱紀錄</a>
+    <br>
+    <hr>
+    <h1>修改</h1>
+    <br>
+    <a href="/">修改員工個人資料</a>
+    <br>
+    <hr>
+    <h1>刪除</h1>
+    <br>
+    <a href="/">刪除讀者帳戶</a>
+    <br>
+    <a href="/">刪除管理員帳戶</a>
+    <br>
+    <a href="/">刪除單筆借閱紀錄</a>
+    <br>
+    <a href="/">刪除單筆書籍</a>
     <br>
     <input type="button" value="登出" onclick="location.href='/s_signout'">
 </body>
