--- a/templates/r_member.html
+++ b/templates/r_member.html
@@ -9,14 +9,28 @@
 <body>
     <h1>{{ rname }}你好，歡迎你回來</h1>
     <br>
+    <h1>查詢</h1>
     <a href="/book_available">我要借書</a>
+    <br>
+    <a href="/s_profile">查看個人資料</a>
+    <hr>
+    <h1>新增</h1>
+    <br>
+    <a href="/">新增書籍</a>
+    <br>
+    <a href="/">新增一筆借閱紀錄</a>
+    <br>
+    <hr>
+    <h1>修改</h1>
     <br>
     <a href="/return">我要還書</a>
     <br>
-    <a href="/modify0">修改個人資料</a>
+	<a href="/modify0">修改個人資料</a>
     <br>
-    <a href="/recommend">書籍薦購</a>
+    <hr>
+    <h1>刪除</h1>
     <br>
+    <a href="/">刪除個人帳戶</a>
     <br>
     <input type="button" value="登出" onclick="location.href='/r_signout'">
 </body>
