--- a/templates/staff.html
+++ b/templates/staff.html
@@ -8,7 +8,7 @@
 
 <body>
     <h1>管理員登入</h1>
-    <form action="/s_signin" method="POST">
+    <form action="/s_member" method="POST">
         請輸入員工編號 <input type="text" name="empid" /><br/>
         密碼 <input type="password" name="password" /><br/>
         <button>登入</button>
