--- a/templates/r_member.html
+++ b/templates/r_member.html
@@ -12,7 +12,7 @@
     <h1>查詢</h1>
     <a href="/book_available">我要借書</a>
     <br>
-    <a href="/s_profile">查看個人資料</a>
+    <a href="/r_profile">查看個人資料</a>
     <hr>
     <h1>新增</h1>
     <br>
@@ -25,6 +25,7 @@
     <br>
     <a href="/return">我要還書</a>
     <br>
+
 	<a href="/modify0">修改個人資料</a>
     <br>
     <hr>
