--- a/templates/book_available.html
+++ b/templates/book_available.html
@@ -28,10 +28,10 @@
          <td>{{row["category"]}}</td>
          <td>{{row["version"]}}</td>
          <td>
-            {% if row["ISBN"] in reports %}
-            不在架上
-            {% else %}
+            {% if row["ISBN"] not in reports %}
             <a href="/borrow?book={{row['ISBN']}}">我要借書</a>
+               {% else %}
+               不在架上
             {% endif %}
          </td>
       </tr>
