--- a/templates/new_staff.html
+++ b/templates/new_staff.html
@@ -12,10 +12,10 @@
         姓名<br>
         <input type="text" name="sname" /></br>
         員工編號<br>
-        <input type="text" name="empid" /></br><br>
+        <input type="text" name="empid" /></br>
         密碼<br>
         <input type="password" name="password" /></br><br>
-        
+
         <button>註冊</button>
     </form>
 </body>
