--- a/templates/s_member.html
+++ b/templates/s_member.html
@@ -16,7 +16,7 @@
     <br>
     <a href="/">查看所有書籍</a>
     <br>
-    <a href="/">查看所有借閱紀錄</a>
+    <a href="/reports">查看所有借閱紀錄</a>
     <br>
     <hr>
     <h1>新增</h1>
