--- a/templates/reports.html
+++ b/templates/reports.html
@@ -7,6 +7,9 @@
     <title>Document</title>
 </head>
 <body>
+   <br>
+    <div><a href="/s_member">回到控制面板</a></div>
+    <br>
     <table border = 1>
         <thead>
            <td>編號</td>
