--- a/templates/s_member.html
+++ b/templates/s_member.html
@@ -14,14 +14,14 @@
     <br>
     <a href="/s_profile">查看個人資料</a>
     <br>
-    <a href="/">查看所有書籍</a>
+    <a href="/book_manage">查看所有書籍</a>
     <br>
     <a href="/reports">查看所有借閱紀錄</a>
     <br>
     <hr>
     <h1>新增</h1>
     <br>
-    <a href="/">新增書籍</a>
+    <a href="/book_manage">新增書籍</a>
     <br>
     <a href="/">新增一筆借閱紀錄</a>
     <br>
