--- a/templates/book_available.html
+++ b/templates/book_available.html
@@ -9,6 +9,9 @@
 <body>
 
    <h1>我要借閱</h1>
+   <br>
+    <div><a href="/r_member">回首頁</a></div>
+    <br>
    <hr>
    <table border=1>
       <thead>
