--- a/templates/r_member.html
+++ b/templates/r_member.html
@@ -10,15 +10,14 @@
     <h1>{{ rname }}你好，歡迎你回來</h1>
     <br>
     <h1>查詢</h1>
-    <a href="/book_available">我要借書</a>
+    <a href="/booklist">查看所有書籍</a>
     <br>
     <a href="/r_profile">查看個人資料</a>
     <hr>
     <h1>新增</h1>
+    <a href="/book_available">我要借書</a>
     <br>
-    <a href="/">新增書籍</a>
-    <br>
-    <a href="/">新增一筆借閱紀錄</a>
+    <a href="/recommend">書籍薦購</a>
     <br>
     <hr>
     <h1>修改</h1>
@@ -26,12 +25,12 @@
     <a href="/return">我要還書</a>
     <br>
 
-	<a href="/modify0">修改個人資料</a>
+	<a href="/r_modify0">修改個人資料</a>
     <br>
     <hr>
     <h1>刪除</h1>
     <br>
-    <a href="/">刪除個人帳戶</a>
+    <a href="/del_account">刪除個人帳戶</a>
     <br>
     <br>
     <input type="button" value="登出" onclick="location.href='/r_signout'">
