--- a/templates/s_member.html
+++ b/templates/s_member.html
@@ -16,30 +16,32 @@
     <br>
     <a href="/book_manage">查看所有書籍</a>
     <br>
-    <a href="/reports">查看所有借閱紀錄</a>
+    <a href="/report_manage">查看所有借閱紀錄</a>
+    <br>
+    <a href="/recommend_list">查看讀者薦購名單</a>
     <br>
     <hr>
     <h1>新增</h1>
     <br>
     <a href="/book_manage">新增書籍</a>
     <br>
-    <a href="/">新增一筆借閱紀錄</a>
+    <a href="/report_manage">新增一筆借閱紀錄</a>
     <br>
     <hr>
     <h1>修改</h1>
     <br>
-    <a href="/">修改員工個人資料</a>
+    <a href="/s_modify0">修改員工個人資料</a>
     <br>
     <hr>
     <h1>刪除</h1>
     <br>
-    <a href="/">刪除讀者帳戶</a>
+    <a href="/del_reader">刪除讀者帳戶</a>
     <br>
-    <a href="/">刪除管理員帳戶</a>
+    <a href="/del_staff">刪除管理員帳戶</a>
     <br>
-    <a href="/">刪除單筆借閱紀錄</a>
+    <a href="/report_manage">刪除單筆借閱紀錄</a>
     <br>
-    <a href="/">刪除單筆書籍</a>
+    <a href="/book_manage">下架書籍</a>
     <br>
     <input type="button" value="登出" onclick="location.href='/s_signout'">
     <br>
