--- a/templates/book_manage.html
+++ b/templates/book_manage.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>管理書本頁面</h1>
-  <form action="/new_book">
+    <form action="{{ url_for('new_book') }}" method="POST">
       輸入欲上架的書籍ID
       <input type="text" name="ISBN"/>
       書名
