--- a/templates/home.html
+++ b/templates/home.html
@@ -12,7 +12,7 @@
 <br>
 <br>
 <h1>管理員登入</h1>
-    <form action="/s_member" method="POST">
+    <form action="/s_signin" method="POST">
         員工編號 <input type="text" name="empid" /><br/>
         輸入密碼 <input type="password" name="password" /><br/>
         <button>登入</button>
