--- a/templates/r_modify.html
+++ b/templates/r_modify.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>修改個人資料</h1>
-    <form action="{{ url_for('modify') }}" method="POST">
+    <form action="{{ url_for('r_modify') }}" method="POST">
         姓名：{{ rname }} <br>
         身分證字號：{{ ssn }} <br>
         地址：<br>
