--- a/templates/report_manage.html
+++ b/templates/report_manage.html
@@ -7,6 +7,19 @@
     <title>Document</title>
 </head>
 <body>
+   <h1>所有借閱紀錄</h1>
+   <form action="{{ url_for('new_report') }}" method="POST">
+     讀者身分證
+     <input type="text" name="SSN"/>
+     ISBN
+     <input type="text" name="ISBN"/>
+     借書日期
+     <input type="text" name="issue"/>
+     應歸還日期
+     <input type="text" name="return_date"/>
+     <button>新增一筆借閱紀錄</button>
+ </form>
+ <br>
    <br>
     <div><a href="/s_member">回到控制面板</a></div>
     <br>
