--- a/templates/r_profile.html
+++ b/templates/r_profile.html
@@ -16,7 +16,7 @@
     <br>
     身分證字號：{{reader["ssn"]}}
     <br>
-    地址{{reader["address"]}}
+    地址:{{reader["address"]}}
     <br>
     信箱：{{reader['mail']}}
     <br>
