--- a/templates/s_member.html
+++ b/templates/s_member.html
@@ -30,7 +30,7 @@
     <hr>
     <h1>修改</h1>
     <br>
-    <a href="/s_modify0">修改員工個人資料</a>
+    <a href="/s_modify">修改員工個人資料</a>
     <br>
     <hr>
     <h1>刪除</h1>
