--- a/templates/del_account.html
+++ b/templates/del_account.html
@@ -9,6 +9,9 @@
 <body>
     <h1>{{ rname }}您好，您確定要刪除自己的帳戶？</h1>
     <br>
+    <div><a href="/r_member">回到控制面板</a></div>
+    <br>
+    <hr>
     <form action="{{ url_for('del_account_self') }}">
         <button>刪除帳戶</button>
     </form>
