--- a/templates/del_staff.html
+++ b/templates/del_staff.html
@@ -9,6 +9,10 @@
 <body>
     <h1>{{ sname }}您好，您確定要刪除自己的帳戶？</h1>
     <br>
+    <div><a href="/s_member">回到控制面板</a></div>
+    <br>
+    <hr>
+    <br>
     <form action="{{ url_for('del_staff_self') }}">
         <button>刪除帳戶</button>
     </form>
