--- a/templates/r_member.html
+++ b/templates/r_member.html
@@ -13,6 +13,8 @@
     <a href="/booklist">查看所有書籍</a>
     <br>
     <a href="/r_profile">查看個人資料</a>
+    <br>
+    <a href="/r_borrowed">查看目前借閱的書籍</a>
     <hr>
     <h1>新增</h1>
     <a href="/book_available">我要借書</a>
@@ -22,7 +24,7 @@
     <hr>
     <h1>修改</h1>
     <br>
-    <a href="/return">我要還書</a>
+    <a href="/r_borrowed">我要還書</a>
     <br>
 
 	<a href="/r_modify0">修改個人資料</a>
