--- a/templates/s_modify.html
+++ b/templates/s_modify.html
@@ -8,12 +8,15 @@
 </head>
 <body>
     <h1>修改員工個人資料</h1>
-    <form action="{{ url_for('s_modify') }}" method="POST">
+    <form action="{{ url_for('s_modify0') }}" method="POST">
         員工編號：{{ empid }} <br>
         修改名字：<br>
         <input type="text" name="sname" /></br>
         修改密碼<br>
         <input type="password" name="password" /><br><br>
+        <br>
+        <div><a href="/s_member">回到控制面板</a></div>
+        <br>
         <button>修改</button>
     </form>
 </body>
