week2 -ER model & relational schema

--- a/templates/book_manage.html
+++ b/templates/book_manage.html
@@ -19,6 +19,8 @@
       <input type="text" name="category"/>
       版次
       <input type="text" name="version"/>
+      出版社
+      <input type="text" name="publisher"/>
       <button>新增</button>
   </form>
   <br>
