--- a/templates/r_borrow.html
+++ b/templates/r_borrow.html
@@ -3,12 +3,12 @@
 
 <head>
    <meta charset="utf-8" />
-   <title> 我要還書 </title>
+   <title> 借閱紀錄 </title>
 </head>
 
 <body>
 
-   <h1>我要還書</h1>
+   <h1>我的借閱紀錄</h1>
    <br>
     <div><a href="/r_member">回首頁</a></div>
     <br>
