--- a/templates/r_member.html
+++ b/templates/r_member.html
@@ -27,7 +27,7 @@
     <a href="/r_borrowed">我要還書</a>
     <br>
 
-	<a href="/r_modify0">修改個人資料</a>
+	<a href="/r_modify">修改個人資料</a>
     <br>
     <hr>
     <h1>刪除</h1>
