--- a/templates/book_available.html
+++ b/templates/book_available.html
@@ -20,6 +20,7 @@
          <td>作者</td>
          <td>分類</td>
          <td>版次</td>
+         <td>出版社</td>
          <td>是否可借閱</td>
       </thead>
 
@@ -30,6 +31,7 @@
          <td>{{row["author"]}}</td>
          <td>{{row["category"]}}</td>
          <td>{{row["version"]}}</td>
+         <td>{{row["publisher"]}}</td>
          <td>
             <a href="/borrow?book={{row['ISBN']}}">我要借書</a>
          </td>
