--- a/templates/booklist.html
+++ b/templates/booklist.html
@@ -16,6 +16,7 @@
             <td>作者</td>
             <td>分類</td>
             <td>版次</td>
+            <td>出版社</td>
          </thead>
          
          {% for row in books %}  
@@ -24,7 +25,8 @@
                <td>{{row["title"]}}</td>
                <td>{{row["author"]}}</td>
                <td>{{row['category']}}</td>
-               <td>{{row['version']}}</td>	
+               <td>{{row['version']}}</td>
+               <td>{{row['publisher']}}</td>	
             </tr>
          {% endfor %}
       </table>
