--- a/templates/r_member.html
+++ b/templates/r_member.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>讀者專區</title>
-</head>
+    <head>
+        <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>讀者專區</title>
+        <meta name="google" content="notranslate">
+     </head>
 <body>
     <h1>{{ rname }}你好，歡迎你回來</h1>
     <br>
     <h1>查詢</h1>
-    <a href="/booklist">查看所有書籍</a>
+    <a href="/r_booklist">查看所有書籍</a>
     <br>
     <a href="/r_profile">查看個人資料</a>
     <br>
