--- a/templates/r_profile.html
+++ b/templates/r_profile.html
@@ -2,11 +2,11 @@
 <html>
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>讀者資料</title>
-</head>
+    <meta name="google" content="notranslate">
+ </head>
 
 <body>
     <h1>讀者個人資料</h1>
@@ -23,7 +23,7 @@
     電話號碼：{{reader['phone']}}
     <br>
     <br>
-    <div><a href="/r_member">回到控制面板</a></div>
+    <div><a href="/r_member">回會員控制頁面</a></div>
 </body>
 
 </html>
