--- a/templates/report_manage.html
+++ b/templates/report_manage.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
+   <head>
+      <meta charset="utf-8" />
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <title>借閱報告</title>
+      <meta name="google" content="notranslate">
+   </head>
 <body>
    <h1>所有借閱紀錄</h1>
    <form action="/new_report" method="POST">
@@ -23,7 +23,8 @@
  </form>
  <br>
    <br>
-    <div><a href="/s_member">回到控制面板</a></div>
+    <div><a href="/s_member">回管理員控制頁面</a></div>
+    <hr>
     <br>
     <table border = 1>
         <thead>
