--- a/templates/s_member.html
+++ b/templates/s_member.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>圖書管理員專區</title>
-</head>
+    <head>
+        <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>管理員專區</title>
+        <meta name="google" content="notranslate">
+     </head>
 <body>
     <h1>{{ sname }}你好，歡迎你回來</h1>
     <br>
