--- a/templates/book_available.html
+++ b/templates/book_available.html
@@ -3,15 +3,18 @@
 
 <head>
    <meta charset="utf-8" />
-   <title> 我要借閱 </title>
+   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <title>我要借閱</title>
+   <meta name="google" content="notranslate">
 </head>
 
 <body>
 
    <h1>我要借閱</h1>
    <br>
-    <div><a href="/r_member">回首頁</a></div>
+    <div><a href="/r_member">回會員控制頁面</a></div>
     <br>
+    <div><a href="/r_publishers">查看所有出版商</a></div>
    <hr>
    <table border=1>
       <thead>
