--- a/templates/book_search.html
+++ b/templates/book_search.html
@@ -1,7 +1,15 @@
 <!doctype html>
 <html>
+   <head>
+      <meta charset="utf-8" />
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <title>查詢結果</title>
+      <meta name="google" content="notranslate">
+   </head>
    <body>
     <h1>查詢結果</h1>
+    <br>
+    <div><a href="/">回到首頁</a></div>
     <br>
     <hr>
       <table border = 1>
