--- a/templates/booklist.html
+++ b/templates/booklist.html
@@ -1,5 +1,11 @@
 <!doctype html>
 <html>
+   <head>
+      <meta charset="utf-8" />
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <title>所有書本</title>
+      <meta name="google" content="notranslate">
+   </head>
    <body>
 
     <h1>所有書本</h1>
@@ -8,6 +14,11 @@
       <input type="text" name="book_search"/>
       <button>查詢</button>
   </form>
+  <br>
+    <div><a href="/publishers">查看所有出版商</a></div>
+    <br>
+    <div><a href="/">回到首頁</a></div>
+    <br>
     <hr>
       <table border = 1>
          <thead>
