--- a/templates/borrow_result.html
+++ b/templates/borrow_result.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>結果</title>
-</head>
+    <head>
+        <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>結果</title>
+        <meta name="google" content="notranslate">
+     </head>
 <body>
     <h1>{{msg1}}</h1>
     <u>您借閱的書籍</u>：【{{msg2}}】
     <h2><a href = "\book_available">繼續借書</a></h2><br>
-    <a href = "\r_member">回控制頁面</a>
+    <a href = "\r_member">回會員控制頁面</a>
 </body>
 </html>
