--- a/templates/del_account.html
+++ b/templates/del_account.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>警告</title>
-</head>
+    <head>
+        <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>警告</title>
+        <meta name="google" content="notranslate">
+     </head>
 <body>
     <h1>{{ rname }}您好，您確定要刪除自己的帳戶？</h1>
     <br>
-    <div><a href="/r_member">回到控制面板</a></div>
+    <div><a href="/r_member">回會員控制頁面</a></div>
     <br>
     <hr>
     <form action="{{ url_for('del_account_self') }}">
