--- a/templates/del_reader.html
+++ b/templates/del_reader.html
@@ -11,7 +11,7 @@
 <body>
     <h1>管理員您好，請問您想移除哪位讀者帳戶?</h1>
     <br>
-    <div><a href="/s_member">回到控制面板</a></div>
+    <div><a href="/s_member">回管理員控制頁面</a></div>
     <br>
     <hr>
     <form action="{{ url_for('del_reader_operation') }}" method="POST">
