--- a/templates/home.html
+++ b/templates/home.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<meta charset="utf-8" />
-	<title> 首頁 </title>
-</head>
+	<head>
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<title>首頁</title>
+		<meta name="google" content="notranslate">
+	 </head>
 <body>
 <h1>圖書資訊暨借閱管理系統</h1>
 <a href="/">首頁</a>
