--- a/templates/new_reader.html
+++ b/templates/new_reader.html
@@ -3,13 +3,17 @@
 
 <head>
     <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> 註冊帳戶 </title>
-</head>
+    <title>註冊帳戶</title>
+    <meta name="google" content="notranslate">
+ </head>
 
 <body>
     <h1>註冊讀者帳戶</h1>
+    <br>
+    <div><a href="/">回到首頁</a></div>
+    <br>
+    <hr>
     <form action="{{ url_for('r_signup') }}" method="POST">
         姓名<br>
         <input type="text" name="rname" /></br>
