--- a/templates/new_staff.html
+++ b/templates/new_staff.html
@@ -3,11 +3,16 @@
 
 <head>
     <meta charset="utf-8" />
-    <title> 註冊帳戶 </title>
-</head>
-
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>註冊帳戶</title>
+    <meta name="google" content="notranslate">
+ </head>
 <body>
     <h1>註冊管理員帳戶</h1>
+    <br>
+    <div><a href="/">回到首頁</a></div>
+    <br>
+    <hr>
     <form action="{{ url_for('s_signup') }}" method="POST">
         姓名<br>
         <input type="text" name="sname" /></br>
