--- a/templates/r_borrow.html
+++ b/templates/r_borrow.html
@@ -3,14 +3,16 @@
 
 <head>
    <meta charset="utf-8" />
-   <title> 借閱紀錄 </title>
+   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <title>借閱紀錄</title>
+   <meta name="google" content="notranslate">
 </head>
 
 <body>
 
    <h1>我的借閱紀錄</h1>
    <br>
-    <div><a href="/r_member">回首頁</a></div>
+    <div><a href="/r_member">回會員控制頁面</a></div>
     <br>
    <hr>
    <table border=1>
