--- a/templates/r_modify.html
+++ b/templates/r_modify.html
@@ -1,13 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
+    <head>
+        <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>修改資料</title>
+        <meta name="google" content="notranslate">
+     </head>
 <body>
     <h1>修改個人資料</h1>
+    <br>
+    <div><a href="/r_member">回會員控制頁面</a></div>
+    <br>
+    <hr>
     <form action="{{ url_for('r_modify0') }}" method="POST">
         姓名：{{ rname }} <br>
         身分證字號：{{ ssn }} <br>
