--- a/templates/reader_list.html
+++ b/templates/reader_list.html
@@ -1,15 +1,19 @@
 <!doctype html>
 <html>
+   <head>
+      <meta charset="utf-8" />
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <title>管理讀者</title>
+      <meta name="google" content="notranslate">
+   </head>
    <body>
 
     <h1>所有讀者</h1>
     <br>
-    <div><a href="/s_member">回到控制面板</a></div>
+    <div><a href="/s_member">回管理員控制頁面</a></div>
     <br>
     <hr>
-
     {{ msg }}
-
       <table border = 1>
          <thead>
             <td>姓名</td>
