--- a/templates/recommend_list.html
+++ b/templates/recommend_list.html
@@ -1,10 +1,16 @@
 <!doctype html>
 <html>
+   <head>
+      <meta charset="utf-8" />
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <title>薦購名單</title>
+      <meta name="google" content="notranslate">
+   </head>
    <body>
 
     <h1>所有薦購名單</h1>
     <br>
-    <div><a href="/s_member">回到控制面板</a></div>
+    <div><a href="/s_member">回管理員控制頁面</a></div>
     <br>
     <hr>
 
