--- a/templates/result.html
+++ b/templates/result.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>結果</title>
-</head>
+    <head>
+        <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>結果</title>
+        <meta name="google" content="notranslate">
+     </head>
 <body>
     <h1>{{msg}}</h1>
     <h2><a href = "\">返回首頁</a></h2>
