--- a/templates/s_modify.html
+++ b/templates/s_modify.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
+    <head>
+        <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>修改個人資料</title>
+        <meta name="google" content="notranslate">
+     </head>
 <body>
     <h1>修改員工個人資料</h1>
     <form action="{{ url_for('s_modify0') }}" method="POST">
@@ -15,9 +15,9 @@
         修改密碼<br>
         <input type="password" name="password" /><br><br>
         <br>
-        <div><a href="/s_member">回到控制面板</a></div>
-        <br>
         <button>修改</button>
+        <br>
+        <div><a href="/s_member">回管理員控制頁面</a></div>
     </form>
 </body>
 </html>
