--- a/templates/s_profile.html
+++ b/templates/s_profile.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>管理員資料</title>
-</head>
+    <head>
+        <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>管理員資料</title>
+        <meta name="google" content="notranslate">
+     </head>
 <body>
     <h1>管理員個人資料</h1>
     <br><hr>         
@@ -14,7 +14,7 @@
                員工編號：{{staff["empid"]}}	
                <br>
       <br>
-    <div><a href="/s_member">回到控制面板</a></div>
+    <div><a href="/s_member">回管理員控制頁面</a></div>
      
 
    </body>
