--- a/templates/book_manage.html
+++ b/templates/book_manage.html
@@ -6,7 +6,7 @@
       <title>書籍管理</title>
       <meta name="google" content="notranslate">
    </head>
-<body>
+<body bgcolor="#FFF2F2">
     <h1>管理書本頁面</h1>
     <form action="{{ url_for('new_book') }}" method="POST">
       輸入欲上架的書籍ID
