--- a/templates/del_reader.html
+++ b/templates/del_reader.html
@@ -9,9 +9,38 @@
 </head>
 
 <body>
-    <h1>管理員您好，請問您想移除哪位讀者帳戶?</h1>
+    <style type = "text/css">
+        body{
+           position: absolute;
+           background-color: #FFF2F2;
+        }
+        div{
+           width:450px ;
+           text-align: center;
+           position:absolute;
+           white-space:nowrap;
+           font-size: 1.5em;
+           left: 580px;
+           top: 200px;
+        }
+        .a1{
+           background-color: transparent;
+           color: firebrick;
+           border-width: 0px;
+           height:350px ;
+           width: 800px;
+           font-size: 1.5em;
+           position:absolute;
+              text-align: center;
+           left: 400px;
+           top: 50px;
+        }
+       </style>
+      <div class = "a1">
+        <h1>管理員您好，請問您想移除哪位讀者帳戶?</h1>
+      </div>
     <br>
-    <div><a href="/s_member">回管理員控制頁面</a></div>
+    <div><a href="/s_member">回管理員控制頁面</a>
     <br>
     <hr>
     <form action="{{ url_for('del_reader_operation') }}" method="POST">
@@ -21,6 +50,7 @@
         <input type="text" name="ssn" /></br><br>
         <button>刪除帳戶</button>
     </form>
+    </div>
 </body>
 
 </html>
