--- a/templates/del_staff.html
+++ b/templates/del_staff.html
@@ -7,14 +7,44 @@
         <meta name="google" content="notranslate">
      </head>
 <body>
-    <h1>{{ sname }}您好，您確定要刪除自己的帳戶？</h1>
+    <style type = "text/css">
+        body{
+           position: absolute;
+           background-color: #FFF2F2;
+        }
+        div{
+           width:450px ;
+           text-align: center;
+           position:absolute;
+           white-space:nowrap;
+           font-size: 1.5em;
+           left: 580px;
+           top: 200px;
+        }
+        .a1{
+           background-color: transparent;
+           color: firebrick;
+           border-width: 0px;
+           height:350px ;
+           width: 800px;
+           font-size: 1.5em;
+           position:absolute;
+              text-align: center;
+           left: 400px;
+           top: 50px;
+        }
+       </style>
+      <div class = "a1">
+        <h1>{{ sname }}您好，您確定要刪除自己的帳戶？</h1>
+      </div>
     <br>
-    <div><a href="/s_member">回管理員控制頁面</a></div>
+    <div><a href="/s_member">回管理員控制頁面</a>
     <br>
     <hr>
     <br>
     <form action="{{ url_for('del_staff_self') }}">
         <button>刪除帳戶</button>
     </form>
+    </div>
 </body>
 </html>
