--- a/templates/r_booklist.html
+++ b/templates/r_booklist.html
@@ -6,8 +6,7 @@
       <title>所有書籍</title>
       <meta name="google" content="notranslate">
    </head>
-   <body>
-
+   <body bgcolor="#FFF2F2">
     <h1>所有書本</h1>
   <form action="/book_search">
       請輸入書名
