--- a/templates/r_modify.html
+++ b/templates/r_modify.html
@@ -7,9 +7,36 @@
         <meta name="google" content="notranslate">
      </head>
 <body>
-    <h1>修改個人資料</h1>
-    <br>
-    <div><a href="/r_member">回會員控制頁面</a></div>
+    <style type = "text/css">
+		body{
+			position: absolute;
+			background-color: #FFF2F2;
+		}
+		div{
+			width:450px ;
+			text-align: center;
+			position:absolute;
+            font-size: 1.3em;
+			left: 580px;
+			top: 200px;
+		}
+		.a1{
+			background-color: transparent;
+			color: firebrick;
+			border-width: 0px;
+			height:350px ;
+			width: 800px;
+			font-size: 1.5em;
+			position:absolute;
+            text-align: center;
+			left: 400px;
+			top: 50px;
+		}
+	  </style>
+    <div class = "a1">
+        <h1>修改個人資料</h1>
+    </div>
+    <div><a href="/r_member">回會員控制頁面</a>
     <br>
     <hr>
     <form action="{{ url_for('r_modify0') }}" method="POST">
@@ -25,5 +52,6 @@
         <input type="password" name="password" /><br><br>
         <button>修改</button>
     </form>
+    </div>
 </body>
 </html>
