--- a/templates/reader_list.html
+++ b/templates/reader_list.html
@@ -7,10 +7,37 @@
       <meta name="google" content="notranslate">
    </head>
    <body>
-
-    <h1>所有讀者</h1>
+      <style type = "text/css">
+         body{
+            position: absolute;
+            background-color: #FFF2F2;
+         }
+         div{
+            text-align: center;
+            position:absolute;
+            white-space:nowrap;
+            font-size: 1.3em;
+            left: 450px;
+            top: 200px;
+         }
+         .a1{
+            background-color: transparent;
+            color: firebrick;
+            border-width: 0px;
+            height:350px ;
+            width: 800px;
+            font-size: 1.5em;
+            position:absolute;
+            text-align: center;
+            left: 370px;
+            top: 50px;
+         }
+        </style>
+       <div class = "a1">
+           <h1>所有讀者</h1>
+       </div>
     <br>
-    <div><a href="/s_member">回管理員控制頁面</a></div>
+    <div><a href="/s_member">回管理員控制頁面</a>
     <br>
     <hr>
     {{ msg }}
@@ -34,6 +61,6 @@
                <td>{{row['password']}}</td>	
             </tr>
          {% endfor %}
-      </table>
+      </table></div>
    </body>
 </html>
