--- a/templates/report_manage.html
+++ b/templates/report_manage.html
@@ -6,7 +6,7 @@
       <title>借閱報告</title>
       <meta name="google" content="notranslate">
    </head>
-<body>
+<body bgcolor="#FFF2F2">
    <h1>所有借閱紀錄</h1>
    <form action="/new_report" method="POST">
      讀者身分證
