--- a/templates/booklist.html
+++ b/templates/booklist.html
@@ -6,7 +6,7 @@
       <title>所有書本</title>
       <meta name="google" content="notranslate">
    </head>
-   <body>
+   <body bgcolor="#FFF2F2">
 
     <h1>所有書本</h1>
   <form action="/book_search">
