--- a/templates/del_account.html
+++ b/templates/del_account.html
@@ -7,13 +7,41 @@
         <meta name="google" content="notranslate">
      </head>
 <body>
-    <h1>{{ rname }}您好，您確定要刪除自己的帳戶？</h1>
-    <br>
-    <div><a href="/r_member">回會員控制頁面</a></div>
+    <style type = "text/css">
+		body{
+			position: absolute;
+			background-color: #FFF2F2;
+		}
+		div{
+			width:450px ;
+			text-align: center;
+			position:absolute;
+            font-size: 1.1em;
+			left: 580px;
+			top: 200px;
+		}
+		.a1{
+			background-color: transparent;
+			color: firebrick;
+			border-width: 0px;
+			height:350px ;
+			width: 800px;
+			font-size: 1.3em;
+			position:absolute;
+            text-align: center;
+			left: 440px;
+			top: 50px;
+		}
+	  </style>
+    <div class = "a1">
+        <h1>{{ rname }}您好，您確定要刪除自己的帳戶？</h1>
+    </div>
+    <div><a href="/r_member">回會員控制頁面</a>
     <br>
     <hr>
     <form action="{{ url_for('del_account_self') }}">
         <button>刪除帳戶</button>
     </form>
+    </div>
 </body>
 </html>
