--- a/templates/publishers.html
+++ b/templates/publishers.html
@@ -7,10 +7,36 @@
       <meta name="google" content="notranslate">
    </head>
    <body>
-
-    <h1>所有出版商</h1>
+      <style type = "text/css">
+         body{
+            position: absolute;
+            background-color: #FFF2F2;
+         }
+         div{
+            width:450px ;
+            text-align: center;
+            position:absolute;
+            left: 550px;
+            top: 200px;
+         }
+         .a1{
+            background-color: transparent;
+            color: firebrick;
+            border-width: 0px;
+            height:350px ;
+            width: 800px;
+            font-size: 1.9em;
+            position:absolute;
+            left: 375px;
+            top: 50px;
+         }
+        </style>
+   
+       <div class = "a1">
+           <h1>所有出版商</h1>
+       </div>
   <br>
-    <div><a href="/">回到首頁</a></div>
+    <div><a href="/">回到首頁</a>
     <hr>
       <table border = 1>
          <thead>
@@ -25,6 +51,6 @@
             </tr>
          {% endfor %}
       </table>
-
+      </div>
    </body>
 </html>
