--- a/templates/r_member.html
+++ b/templates/r_member.html
@@ -5,36 +5,114 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>讀者專區</title>
         <meta name="google" content="notranslate">
+
      </head>
 <body>
-    <h1>{{ rname }}你好，歡迎你回來</h1>
-    <br>
-    <h1>查詢</h1>
-    <a href="/r_booklist">查看所有書籍</a>
-    <br>
-    <a href="/r_profile">查看個人資料</a>
-    <br>
-    <a href="/r_borrowed">查看目前借閱的書籍</a>
-    <hr>
-    <h1>新增</h1>
-    <a href="/book_available">我要借書</a>
-    <br>
-    <a href="/recommend">書籍薦購</a>
-    <br>
-    <hr>
-    <h1>修改</h1>
-    <br>
-    <a href="/r_borrowed">我要還書</a>
-    <br>
+    <style type = "text/css">
 
-	<a href="/r_modify">修改個人資料</a>
-    <br>
-    <hr>
-    <h1>刪除</h1>
-    <br>
-    <a href="/del_account">刪除個人帳戶</a>
-    <br>
-    <br>
-    <input type="button" value="登出" onclick="location.href='/r_signout'">
+		body{
+            background-color: #FFF2F2;
+            font-family: Arial, sans-serif;
+            -webkit-font-smoothing: antialiased;}
+
+        h1{
+            padding:45px 0;
+            font-size:4em;
+            font-weight:bold;
+            text-align:center;
+        }
+
+        main{
+            width:1000px;
+            margin:0 auto;
+            display:block;
+        }
+
+        ul li{
+            float:left;
+            margin-right:1px;
+            list-style-type:none;
+        }
+
+        ul li a{
+            font-size:2em;
+            font-weight:bold;
+            color:#FFF;
+            text-decoration:none;
+            display:block;
+            width:100px;
+            padding:15px 20px;
+            background:#C15757;
+        }
+
+        ul li a:hover{
+            background:#D26161;
+            color:#FFF;
+        }
+
+        ul li a.current{
+            background:#D26161;
+            color:#FFF;
+        }
+
+        #contents{
+            clear:both;
+            margin-bottom:150px;
+        }
+
+        #contents div{
+            padding:30px 20px;
+            background:#F5F4F2;
+        }
+
+        #contents p{
+            margin-top:20px;
+            line-height:2em;
+            color:#C15757;
+        }
+
+        #contents strong{
+            font-size:3em;
+            font-weight:bold;
+            color:#D6AF62;
+        }
+	  </style>
+
+        <div class = "a1">
+            <h1>{{ rname }}你好，歡迎你回來</h1>
+        </div>
+
+    <main>
+        <ul>
+            <li><a href="#tab1" class="current">查詢</a></li>
+            <li><a href="#tab2">新增</a></li>
+            <li><a href="#tab3">修改</a></li>
+            <li><a href="#tab4">刪除</a></li>
+        </ul>
+        <div id="contents">
+            <div id="tab1">
+                <p><strong>查詢</strong></p>
+                <a href="/r_booklist">查看所有書籍</a><br>
+                <a href="/r_profile">查看個人資料</a><br>
+                <a href="/r_borrowed">查看目前借閱的書籍</a><hr>
+            </div>
+            <div id="tab2">
+                <p><strong>新增</strong></p>
+                <a href="/book_available">我要借書</a><br>
+                <a href="/recommend">書籍薦購</a><br><hr>
+            </div>
+            <div id="tab3">
+                <p><strong>修改</strong></p>
+                <br>
+                <a href="/r_borrowed">我要還書</a><br>
+                <a href="/r_modify">修改個人資料</a><br><hr>
+            </div>
+            <div id="tab4">
+                <p><strong>刪除</strong></p><br>
+                <a href="/del_account">刪除個人帳戶</a><br><br>
+                <input type="button" value="登出" onclick="location.href='/r_signout'">
+            </div>
+        </div>
+    </main>
 </body>
 </html>
