--- a/templates/r_profile.html
+++ b/templates/r_profile.html
@@ -9,8 +9,43 @@
  </head>
 
 <body>
-    <h1>讀者個人資料</h1>
-    <br>
+    <style type = "text/css">
+		body{
+			position: absolute;
+			background-color: #FFF2F2;
+		}
+		div{
+			height:420px ;
+			width:450px ;
+			text-align: center;
+			position:absolute;
+            font-size: 1.5em;
+			left: 550px;
+			top: 200px;
+		}
+		.a1{
+			background-color: transparent;
+			color: firebrick;
+			border-width: 0px;
+			height:350px ;
+			width: 800px;
+			font-size: 1.5em;
+			position:absolute;
+			left: 380px;
+			top: 50px;
+		}
+		.b1{
+			border-width: 0px;
+			background-color: transparent;
+			left : 170px;
+			top: 580px;
+		}
+	  </style>
+
+    <div class = "a1">
+        <h1>讀者個人資料</h1>
+    </div>
+    <div>
     <hr>
     讀者名字：{{reader["rname"]}}
     <br>
@@ -23,7 +58,8 @@
     電話號碼：{{reader['phone']}}
     <br>
     <br>
-    <div><a href="/r_member">回會員控制頁面</a></div>
+    <a href="/r_member">回會員控制頁面</a>
+    </div>
 </body>
 
 </html>
